2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) net>

	* scripts/gschemdoc.sh: Apply patch from Peter Brett to 
	allow gschemdoc to access wiki pages with -w .

	The original patch initially tries to find a local export 
	of the wiki; on failure, it falls back to the online wiki 
	at the gEDA website.

	Since the online wiki and the user's geda version may not 
	be the same, I commented out the part to display the online
	wiki if the file is not locally available. Thanks!
	
2007-04-20 18:32  Dan McMahill <danmc>

	* tests/refdes_renum/: run_tests.sh,
	  outputs/all_new_refdeses-allnew.sch,
	  outputs/all_new_refdeses1-allnew.sch,
	  outputs/all_new_refdeses1:allnew.sch,
	  outputs/all_new_refdeses2-allnew.sch,
	  outputs/all_new_refdeses2:allnew.sch,
	  outputs/all_new_refdeses:allnew.sch,
	  outputs/all_old_refdeses-allold.sch,
	  outputs/all_old_refdeses1-allold.sch,
	  outputs/all_old_refdeses1:allold.sch,
	  outputs/all_old_refdeses2-allold.sch,
	  outputs/all_old_refdeses2:allold.sch,
	  outputs/all_old_refdeses:allold.sch,
	  outputs/multi_clear-file1.sch, outputs/multi_clear-file2.sch,
	  outputs/multi_clear-file3.sch, outputs/multi_clear:file1.sch,
	  outputs/multi_clear:file2.sch, outputs/multi_clear:file3.sch,
	  outputs/multi_pgskip1-file1.sch, outputs/multi_pgskip1-file2.sch,
	  outputs/multi_pgskip1-file3.sch, outputs/multi_pgskip1:file1.sch,
	  outputs/multi_pgskip1:file2.sch, outputs/multi_pgskip1:file3.sch,
	  outputs/multi_pgskip2-file1.sch, outputs/multi_pgskip2-file2.sch,
	  outputs/multi_pgskip2-file3.sch, outputs/multi_pgskip2:file1.sch,
	  outputs/multi_pgskip2:file2.sch, outputs/multi_pgskip2:file3.sch,
	  outputs/multi_renum-file1.sch, outputs/multi_renum-file2.sch,
	  outputs/multi_renum-file3.sch, outputs/multi_renum:file1.sch,
	  outputs/multi_renum:file2.sch, outputs/multi_renum:file3.sch,
	  outputs/single_clear-file1.sch, outputs/single_clear:file1.sch,
	  outputs/single_pgskip1-file1.sch,