@@ -1,23 +1,22 @@
 ## $Id$
 ##
 
-# ls *.sch | sort | awk '{gsub(/:/, "\\:"); printf("\t%s \\\n", $0)}' >> Makefile.am
 EXTRA_DIST= \
-	multi_clear\:file1.sch \
-	multi_clear\:file2.sch \
-	multi_clear\:file3.sch \
-	multi_pgskip1\:file1.sch \
-	multi_pgskip1\:file2.sch \
-	multi_pgskip1\:file3.sch \
-	multi_pgskip2\:file1.sch \
-	multi_pgskip2\:file2.sch \
-	multi_pgskip2\:file3.sch \
-	multi_renum\:file1.sch \
-	multi_renum\:file2.sch \
-	multi_renum\:file3.sch \
-	single_clear\:file1.sch \
-	single_pgskip1\:file1.sch \
-	single_pgskip2\:file1.sch \
-	single_pgskip3\:more_than_10.sch \
-	single_renum\:file1.sch 
+	multi_clear-file1.sch \
+	multi_clear-file2.sch \
+	multi_clear-file3.sch \
+	multi_pgskip1-file1.sch \
+	multi_pgskip1-file2.sch \
+	multi_pgskip1-file3.sch \
+	multi_pgskip2-file1.sch \
+	multi_pgskip2-file2.sch \
+	multi_pgskip2-file3.sch \
+	multi_renum-file1.sch \
+	multi_renum-file2.sch \
+	multi_renum-file3.sch \
+	single_clear-file1.sch \
+	single_pgskip1-file1.sch \
+	single_pgskip2-file1.sch \
+	single_pgskip3-more_than_10.sch \
+	single_renum-file1.sch 
 
