@@ -1,3 +1,8 @@
+2007-04-21 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* tests/refdes_renum/outputs/Makefile.am: Fixed filenames to 
+	have a dash instead of a colon 
+
 2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) net>
 
 	* scripts/gschemdoc.sh: Apply patch from Peter Brett to 
